--- a/app/views/users/signup_with_github_finished.erb
+++ b/app/views/users/signup_with_github_finished.erb
@@ -8,7 +8,7 @@
         <div style="width: 100%; display: block; margin-top: 20px; text-align: left">
             <a class="link link-general" style="font-size: 15px" href="https://github.com/settings/profile">https://github.com/settings/profile</a>
             <div style="width: 100%; height: 350px; display: block; margin-top: 5px; text-align: center" class="image">
-                <%= image_tag '/images/github_public_email_help.png', :alt => "change github mail to public mail", :onload => "imagePreloader(this)" %>
+                <%= image_tag '/images/github_public_email_help.png', :alt => "change github mail to public mail" %>
             </div>
         </div>
     <% end %>
