--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -79,11 +79,9 @@
                         </div>
                 </div>
             </div>
-            <% # if @article.image.url.present? %>
-                <div class='image cover'>
-                    <%= image_tag @article.image.url, :onload => 'imagePreloader(this)' %>  
-                </div>
-            <% # end %>
+            <div class='image cover'>
+                <%= image_tag @article.image.url %>  
+            </div>
             <div class="content md_to_html" style="margin: 10px 0;" dir="rtl">
                 <%= @article.content %>
             </div>
