--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -8,7 +8,7 @@
 					<a href="/courses/show/<%= co.slug %>">
 						<div class='card_Box'>
 							<div class='image cover'>
-								<%= image_tag co.image.url, :onload => 'imagePreloader(this)' %>
+								<%= image_tag co.image.url %>
 							</div>
 							<h3 class='title'><%= co.header %></h3>
 							<p class='desc'><%= co.cover_text[0, 120] %>...</p>
