show cover_text added to show course page

--- a/app/assets/stylesheets/card_box.scss
+++ b/app/assets/stylesheets/card_box.scss
@@ -96,7 +96,7 @@
 
 #show_cardbox {
     text-align: right;
-    .article_icon_span {
+    .cardbox_icon {
         .icon {
             position: relative;
             top: 4px;
