--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -46,14 +46,14 @@
                                     <input type="hidden" name="slug" value="<%= @article.slug %>">
                                     <button type="submit" class="like_button">
                                         <% if @article.liked(session[:user][:id]) %>
-                                            <span class="article_icon_span link-danger" dir="ltr">
+                                            <span class="cardbox_icon link-danger" dir="ltr">
                                                 <span class='icon'>
                                                     <ion-icon name='heart'></ion-icon>
                                                 </span>
                                                 <%= @article.likes.length %>
                                             </span>
                                         <% else %>
-                                            <span class="article_icon_span" dir="ltr">
+                                            <span class="cardbox_icon" dir="ltr">
                                                 <span class='icon'>
                                                     <ion-icon name='heart'></ion-icon>
                                                 </span>
@@ -63,14 +63,14 @@
                                     </button>
                                 <% end %>
                             <% else %>
-                                <span class="article_icon_span" dir="ltr">
+                                <span class="cardbox_icon" dir="ltr">
                                     <span class='icon'>
                                         <ion-icon name='heart'></ion-icon>
                                     </span>
                                     <%= @article.likes.length %>
                                 </span>
                             <% end %>
-                            <span class="article_icon_span" dir="ltr">
+                            <span class="cardbox_icon" dir="ltr">
                                 <span class='icon'>
                                     <ion-icon name='calendar-outline'></ion-icon>
                                 </span>
