we have many errors in our relation

--- a/app/views/dashboard/new_course.html.erb
+++ b/app/views/dashboard/new_course.html.erb
@@ -41,8 +41,8 @@
             </span>
 
             <div style="width: 100%; display: block; margin-top: 20px">
-            	<%= link_to "نمایش دوره", '#', :class => 'btn btn-primary' %>
-            	<%= link_to "ویدیو ها", '/courses/show/' + slug, :class => 'btn btn-primary btn-large-padding' %>
+            	<%= link_to "نمایش دوره", '/courses/show/' + slug, :class => 'btn btn-primary' %>
+            	<%= link_to "ویدیو ها", '/courses/videos/show/', :class => 'btn btn-primary btn-large-padding' %>
         	</div>
         </div>
     <% end %>
