this model finished. testing an other model

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,7 +6,7 @@
 		    <% @articles.each do |art| %>
 		    	<% if art.image.present? %>
 					<a href="/articles/show/<%= art.slug %>">
-						<div class='card_Box'>
+						<div class='card_box'>
 							<div class='image cover'>
 								<%= image_tag art.image.url %>
 							</div>
