--- a/app/views/dashboard/general_statistics.html.erb
+++ b/app/views/dashboard/general_statistics.html.erb
@@ -1,6 +1,7 @@
 <div class="content_box">
+    <%# TODO %>
     <div class="flex_row">
-        <div class="card-box">
+        <div class="cardbox_icon">
             <div class="icon">
                 <ion-icon name="beer-outline"></ion-icon>
             </div>
