--- a/app/assets/stylesheets/card_box.scss
+++ b/app/assets/stylesheets/card_box.scss
@@ -1,4 +1,4 @@
-.card_Box {
+.card_box {
     position: relative;
     .title {
         color: #000;
@@ -62,6 +62,18 @@
     }
 }
 
+.cardbox_icon {
+    .icon {
+        position: relative;
+        top: 4px;
+        font-size: 20px;
+    }
+    font-family: sans-serif;
+    padding-bottom: 3px;
+    margin-left: 10px;
+    color: #222;
+}
+
 .listed_cards {
     width: 100%;
     display: grid;
@@ -96,17 +108,6 @@
 
 #show_cardbox {
     text-align: right;
-    .cardbox_icon {
-        .icon {
-            position: relative;
-            top: 4px;
-            font-size: 20px;
-        }
-        font-family: sans-serif;
-        padding-bottom: 3px;
-        margin-left: 10px;
-        color: #222;
-    }
     .author_row {
         // remove box-shadow virtual margins...
         width: calc(100% - 1rem);
