--- a/app/views/dashboard/my_courses.html.erb
+++ b/app/views/dashboard/my_courses.html.erb
@@ -5,7 +5,7 @@
 		    <% @my_courses.each do |co| %>
 		    	<% if co.image.present? %>
 					<a href="/courses/show/<%= co.slug %>">
-						<div class='card_Box'>
+						<div class='card_box'>
 							<% if co.published? %>
 								<span class="hashtag hashtag-primary">(منتشر شده)</span>
 							<% else %>
