--- a/app/views/introduction/index.html.erb
+++ b/app/views/introduction/index.html.erb
@@ -28,7 +28,7 @@
         <% if @popular_articles.length > 0 %>
             <% @popular_articles.each do |art| %>
                 <a href="/articles/show/<%= art.slug %>">
-                    <div class='card_Box'>
+                    <div class='card_box'>
                         <div class='image cover'>
                             <%= image_tag art.image.url %>
                         </div>
