--- a/app/views/dashboard/my_courses.html.erb
+++ b/app/views/dashboard/my_courses.html.erb
@@ -1,5 +1,5 @@
 <div class="content">
-		<h2 class="container_title bb">دوره های های من (<%= @my_courses.length %>)</h2>
+		<h2 class="container_title bb">دوره های من (<%= @my_courses.length %>)</h2>
 		<% if @my_courses.length > 0 %>
 		<div class="listed_cards mini_list">
 		    <% @my_courses.each do |co| %>
