--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -60,7 +60,7 @@
 			background: rgb(4, 121, 33);
 		}
 		&.btn-mute{
-			&:hover, &:focus, &.active {
+			&, &:hover, &:focus, &:active {
 				background: rgb(6, 212, 58);
 				color: #fff;
 			}	
