--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -32,7 +32,7 @@
                             سطح دوره : <span class="link-black"></span>
                         </a>
                         <a class="link link-mute">
-                            تعداد دانشجویان : <span class="link-black"><%= @course.users.length %></span>
+                            تعداد دانشجویان : <span class="link-black"><%= @course.users.where("is_admin=false").length %></span>
                         </a>
                         <a class="link link-mute">
                             وضعیت دوره : <span class="link-black">
@@ -49,8 +49,23 @@
                     </div>
                     <div class="sepa"></div>
                     <div style="margin: 5px 0;">
-                        <%= form_with url: '', method: :post do |f| %>
-                            <%= f.submit "عضویت در دوره", :class => "btn btn-primary btn-block", data: { disable_with: "لطفا صبر کنید" } %>
+                        <% if session[:user] != nil && !session[:user][:is_owner] && !session[:user][:is_admin] %>
+                            <% if @youre_member_of_this_course %>
+                                <%= form_with url: '/courses/join_at_course', method: :post do |f| %>
+                                    <%= f.hidden_field :slug, :value => @course.slug %>
+                                    <%= f.submit "عضویت در دوره", :class => "btn btn-primary btn-block", data: { disable_with: "لطفا صبر کنید" } %>
+                                <% end %>
+                            <% else %>
+                                <button href="" class="btn btn-success btn-mute btn-block" style="cursor: default">شما عضو از دوره هستید</button>  
+                            <% end %>
+                        <% else %>
+                            <a href="">
+                                <button href="" class="btn btn-primary btn-block">مدیریت ویدیو ها</button>
+                            </a>
+                        <% end %>
+
+                        <% @course.users.where("is_admin=false").each do |u| %>
+                            <%= u.username %> <br>
                         <% end %>
                     </div>
                 </div>
