working on [global search in courses & articles] at search controller

--- a/app/assets/stylesheets/card_box.scss
+++ b/app/assets/stylesheets/card_box.scss
@@ -20,7 +20,7 @@
         .author,
         .comments_count,
         .article_submit_time,
-        .like_icon {
+        .footer_icon {
             position: relative;
             color: #003cff;
             padding-right: 22px;
@@ -34,7 +34,7 @@
             font-family: sans-serif;
         }
         .comments_count,
-        .like_icon {
+        .footer_icon {
             padding-right: 20px;
             margin-right: 10px;
         }
