--- a/app/views/dashboard/my_articles.html.erb
+++ b/app/views/dashboard/my_articles.html.erb
@@ -28,7 +28,7 @@
 									</span>
 								</div>
 								<div>
-									<span class="like_icon link-danger" dir="ltr">
+									<span class="footer_icon link-danger" dir="ltr">
 										<span class='icon'>
 											<ion-icon name='heart'></ion-icon>
 										</span>
