--- a/app/views/dashboard/my_courses.html.erb
+++ b/app/views/dashboard/my_courses.html.erb
@@ -26,7 +26,7 @@
                                     </span>
                                 </div>
                                 <div>
-                                    <span class="like_icon link-danger" dir="ltr">
+                                    <span class="footer_icon link-danger" dir="ltr">
                                         <span class='icon'>
                                             <ion-icon name="book-outline"></ion-icon>
                                         </span>
