--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -47,32 +47,31 @@
                             آخرین بروزرسانی : <span class="link-black"><%= @course.published_time %></span>
                         </a>
                     </div>
-                    <div class="sepa"></div>
+                    
                     <div style="margin: 5px 0;">
-                        <% if session[:user] != nil && !session[:user][:is_owner] && !session[:user][:is_admin] %>
-                            <% if @youre_member_of_this_course %>
-                                <%= form_with url: '/courses/join_at_course', method: :post do |f| %>
-                                    <%= f.hidden_field :slug, :value => @course.slug %>
-                                    <%= f.submit "عضویت در دوره", :class => "btn btn-primary btn-block", data: { disable_with: "لطفا صبر کنید" } %>
+                        <% if session[:user] != nil %>
+                            <% if !session[:user][:is_owner] && !session[:user][:is_admin] %>
+                                <div class="sepa"></div>
+                                <% if @youre_member_of_this_course == nil%>
+                                    <%= form_with url: '/courses/join_at_course', method: :post do |f| %>
+                                        <%= f.hidden_field :slug, :value => @course.slug %>
+                                        <%= f.submit "عضویت در دوره", :class => "btn btn-primary btn-block", data: { disable_with: "لطفا صبر کنید" } %>
+                                    <% end %>
+                                <% else %>
+                                    <button href="" class="btn btn-success btn-mute btn-block" style="cursor: default">شما عضوی از این دوره هستید</button>  
                                 <% end %>
                             <% else %>
-                                <button href="" class="btn btn-success btn-mute btn-block" style="cursor: default">شما عضو از دوره هستید</button>  
+                                <div class="sepa"></div>
+                                <a href="/courses/videos/show">
+                                    <button href="" class="btn btn-primary btn-block">مدیریت ویدیو ها</button>
+                                </a>
                             <% end %>
-                        <% else %>
-                            <a href="">
-                                <button href="" class="btn btn-primary btn-block">مدیریت ویدیو ها</button>
-                            </a>
-                        <% end %>
-
-                        <% @course.users.where("is_admin=false").each do |u| %>
-                            <%= u.username %> <br>
                         <% end %>
                     </div>
                 </div>
             </div>
             <div class="sidebar_contentside">
                 <div id="show_cardbox">
-                    <%# ANCHOR %>
                         <div class='card_box'>
                             <div style="display: block; width: 100%; margin-bottom: 10px;">
                                 <h1 class='title' dir="rtl" style="margin-bottom: 10px;"><%= @course.header %></h3>
@@ -118,7 +117,6 @@
                                 </div>
                             </div>
                         </div>
-                    <%# ANCHOR %>
                 </div>
             </div>
         <% else %>
